# ChangeLog for games-strategy/0ad
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> 0ad-9530.ebuild:
  Updated jpeg depend to virtual/jpeg.

*0ad-9530 (22 May 2011)

  22 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> +0ad-9530.ebuild,
  metadata.xml:
  Bumped.

  31 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> 0ad-9999.ebuild:
  Updated ffmpeg dep.

  09 Nov 2010; Piotr Szymaniak <lazy_bum@o2.pl> -0ad-7970.ebuild,
  0ad-8413.ebuild, 0ad-9999.ebuild:
  Changed deps: media-libs/jpeg -> virtual/jpeg

*0ad-8413 (23 Oct 2010)

  23 Oct 2010; Piotr Szymaniak <lazy_bum@o2.pl> +0ad-8413.ebuild:
  Bumped (bug #278541).

*0ad-7970 (16 Aug 2010)

  16 Aug 2010; Piotr Szymaniak <lazy_bum@o2.pl> -0ad-7732.ebuild,
  +0ad-7970.ebuild:
  Version bump from bug #278541.

*0ad-7732 (11 Jul 2010)

  11 Jul 2010; Piotr Szymaniak <lazy_bum@o2.pl> -0ad-7539.ebuild,
  +0ad-7732.ebuild:
  Version bump (same bug as before for details ;).

*0ad-7539 (14 May 2010)

  14 May 2010; Piotr Szymaniak <lazy_bum@o2.pl> +0ad-7539.ebuild,
  0ad-9999.ebuild:
  Bump to alpha version thanks to Philip Taylor (bug #278541), masked live
  ebuild.

  01 Sep 2009; Piotr Szymaniak <lazy_bum@o2.pl> 0ad-9999.ebuild:
  Updated ebuild.

  24 Jul 2009; Piotr Szymaniak <lazy_bum@o2.pl> 0ad-9999.ebuild:
  Added games_make_wrapper.

  23 Jul 2009; Piotr Szymaniak <lazy_bum@o2.pl> 0ad-9999.ebuild:
  Updated by Aleksandr Yakimov again (see bug #278541 for details).

  23 Jul 2009; Piotr Szymaniak <lazy_bum@o2.pl> 0ad-9999.ebuild:
  Updated ebuild.

  21 Jul 2009; Piotr Szymaniak <lazy_bum@o2.pl> +0ad-9999.ebuild:
  Initial import from bug #278541, ebuild submited by Aleksandr Yakimov.
