@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST 0ad-r08413-alpha-unix-build.tar.xz 3778500 RMD160 8a2ae7a2cfac252ae833bd97cc7c0a915dc246a1 SHA1 28e1136e1f5725aca215e350c040c76de4681dab SHA256 cd3934ffe72ea130885cf76ebebc1f7836a44fba3d786d7fbdfccec9041cb4fb
-DIST 0ad-r08413-alpha-unix-data.tar.xz 139983612 RMD160 01412e1d3fb5434c622587eb30a53632943f2220 SHA1 7dd403dfead3afa30b3a48ed7606dc9267011c13 SHA256 30440422edebec353aba702f7a11dffa0d955fb7cf882a069705a455a73a840d
 DIST 0ad-r09530-alpha-unix-build.tar.xz 4167180 RMD160 9b7256aa737855312a46f7e73ddb8ee4263c6ccf SHA1 e36655ac186100435c7fdf3c223c823f83042978 SHA256 4cbad45b085b412b48c4f3e27e8d808ff64d51d3ae479fd2ac108768af6a5336
 DIST 0ad-r09530-alpha-unix-data.tar.xz 142931332 RMD160 e7ed0cc6676d4888bfd12892757a3032211746f6 SHA1 15c74dcbd85614fe81c2fbf58554f1b701af2e88 SHA256 646f79b17f92872ff9a67d80ee5702d07219f8b3e3c91b438ce79fac2c33ed14
-EBUILD 0ad-8413.ebuild 2967 RMD160 3ef7a1d9aeb56604e756f763318d546d2d3ac2cc SHA1 6d1f5fb179f7bea5957065f5423b109889fbc013 SHA256 d7d3bbdea7972df130a91c4e91601025ee705399d063d1baedce0bc70809b789
+DIST 0ad-r09786-alpha-unix-build.tar.xz 4180988 RMD160 a983c7d744241e5376263bb7bcc8c4a0e9e44957 SHA1 913afadc84be78ec3bf415f3a12fd2a8248a9235 SHA256 d2b3b06d3396197de36b1ddce109b0d306a0d9a01b634b4aa1e669f44bddcffa
+DIST 0ad-r09786-alpha-unix-data.tar.xz 194367112 RMD160 19c072f8ac7ec4da28abd4602c444e510e83e5cc SHA1 9d0f649a7d39b2bae27d88cc4bd120fcd747917f SHA256 5c55bd36a0096d61d410a549fe8e89875f236847cce137eb5a8e89f6a67e49af
 EBUILD 0ad-9530.ebuild 2984 RMD160 868742785e55c609c7607cb8b8d35801effd95fc SHA1 c3dcc88a39c8040192b2e2b0c7d8844d0ded69e1 SHA256 ea24a42a1c42214d89ab0861341c5deca2caa6f5255af759a60bfc2d13dd3865
+EBUILD 0ad-9786.ebuild 2983 RMD160 30a6a5f3a01e5775d6e8a38d41d2cd45f61a0a89 SHA1 65a492d3d689d930de5c1b9e6c7ab56d0fc431b6 SHA256 8bdb64ab03dd52802a9e01f3bb2648eb4bbde6e997b9c9f81ab6b1ebb7693249
 EBUILD 0ad-9999.ebuild 1974 RMD160 d6b727916bd71d58396daac43799c34fa24e0d47 SHA1 be19d1c92e43f9dd4b5470484aeb4832d10e2d11 SHA256 f4ca6e9985eaeb2c57ee1f4b37cc513b93122edb29ccf323e3172857258ac174
-MISC ChangeLog 1748 RMD160 233defc8aca1c361835c74865756fa8994ff4d85 SHA1 3ef0d8c32ccd5f4e9932775e961be3f09e52c98a SHA256 a04a2c13a8c1652a3a6729b9e3bd7f2e4ebe53b79f1ec9a30f39a91f9e9ad301
+MISC ChangeLog 1875 RMD160 305bb8ace63ee7f778bb68413331e4227cdcc43e SHA1 b6aa4aec9acc0af38b5e6999741c8269a589046d SHA256 d4c982d1a2e04e875a4f28aff3d40f5b3305cbec60237f261450e8f37a81beca
 MISC metadata.xml 311 RMD160 9574841904034301964c62e1473cfa9cc87b4a3d SHA1 0d58919cb4e87a41ae120fd828d96bfd18e47ff6 SHA256 a02c1f2932e6820da0474a4165ca5ab6482f4df0a8cd01bba9ba0494bb581d87
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3ay08ACgkQ9xNbxaeWTTzLewCeNGKMZ0LVy8bNVxVdaDNN1wd/
-ICgAoI7ulCdODv8FTCuJtTjGXuxUM/JK
-=P3t4
+iEYEARECAAYFAk4aCm8ACgkQ9xNbxaeWTTxMOACgmIPma/md2srejI4MNSK0CpG9
+oSQAn3kAtKKHqlS/CCnnprLYf56qjLXc
+=A0Ai
 -----END PGP SIGNATURE-----
