@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*0ad-9786 (10 Jul 2011)
+
+  10 Jul 2011; Piotr Szymaniak <szarpaj@grubelek.pl> -0ad-8413.ebuild,
+  +0ad-9786.ebuild:
+  Bumped.
+
   23 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> 0ad-9530.ebuild:
   Updated jpeg depend to virtual/jpeg.
 
